tests/application/access-policy/advanced-assert.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: access-policy
  namespace: access-policy-ns
spec:
  podSelector:
    matchLabels:
      app: access-policy
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: access-policy-other
          podSelector:
            matchLabels:
              app: access-policy-other
      ports:
        - port: 8080
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: access-policy-ns
          podSelector:
            matchLabels:
              app: access-policy-two
      ports:
        - port: 8080
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: access-policy-other
          podSelector:
            matchLabels:
              app: access-policy-other
      ports:
        - port: 8080
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: access-policy-two
spec:
  podSelector:
    matchLabels:
      app: access-policy-two
  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              test: label
          podSelector:
            matchLabels:
              app: access-policy-other
      ports:
        - port: 8080
          protocol: TCP
---
apiVersion: networking.istio.io/v1
kind: ServiceEntry
metadata:
  name: access-policy-egress-56cd7aa901014e78
  namespace: access-policy-ns
spec:
  exportTo:
    - .
    - istio-system
    - istio-gateways
  resolution: DNS
  hosts:
    - example.com
  ports:
    - name: http
      number: 80
      protocol: HTTP
---
apiVersion: networking.istio.io/v1
kind: ServiceEntry
metadata:
  name: access-policy-egress-3a90cb5d70dc06a
  namespace: access-policy-ns
spec:
  exportTo:
    - .
    - istio-system
    - istio-gateways
  resolution: DNS
  hosts:
    - foo.com
  ports:
    - name: https
      number: 443
      protocol: HTTPS
---
apiVersion: networking.istio.io/v1
kind: Sidecar
metadata:
  name: access-policy
  namespace: access-policy-ns
spec:
  egress:
    - hosts:
        - ./example.com
        - ./foo.com
        - access-policy-ns/access-policy-two.access-policy-ns.svc.cluster.local
        - access-policy-other/access-policy-other.access-policy-other.svc.cluster.local
  outboundTrafficPolicy: {}
  workloadSelector:
    labels:
      app: access-policy
---
apiVersion: skiperator.kartverket.no/v1alpha1
kind: Application
metadata:
  name: access-policy
  namespace: access-policy-ns
  labels:
    test: label
spec:
  image: image
  port: 8080
  accessPolicy:
    inbound:
      rules:
        - application: access-policy-other
          namespace: access-policy-other
    outbound:
      external:
        - host: example.com
          ports:
            - name: http
              port: 80
              protocol: HTTP
        - host: foo.com
      rules:
        - application: access-policy-two
        - application: access-policy-other
          namespace: access-policy-other
status:
  accessPolicies: Ready
  conditions:
    - type: InternalRulesValid
      status: "True"
    - type: ExternalRulesValid
      status: "True"
